# skyrift

./: CMakeLists.txt
include/: Client.hpp  Entity.hpp  Game.hpp  Map.hpp  Player.hpp  Projectile.hpp  Server.hpp  Stage.hpp  Tile.hpp  common.hpp  config.hpp
src/: Client.cpp  Entity.cpp  Game.cpp  Map.cpp  Player.cpp  Projectile.cpp  Server.cpp  Stage.cpp  Tile.cpp  main.cpp
